fix platers gap

--- a/src/components/players/Players.module.scss
+++ b/src/components/players/Players.module.scss
@@ -1,4 +1,5 @@
 .players{
     display: flex;
-    column-gap: 1rem;;
+    column-gap: 1rem;
+    margin-bottom: 1rem;
 }
